intitial gcp commit

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.7.4'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+    id 'com.google.cloud.tools.jib' version '3.2.1'
     id 'java'
 }
 
@@ -15,12 +16,21 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.swagger.codegen.v3:swagger-codegen:3.0.35'
     implementation "org.springdoc:springdoc-openapi-ui:1.6.11"
+    implementation 'com.h2database:h2'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'com.h2database:h2'
+
+    implementation "com.google.cloud:spring-cloud-gcp-starter"
+    implementation "com.google.cloud:spring-cloud-gcp-starter-data-firestore"
+}
+
+dependencyManagement {
+    imports{
+        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:3.2.1"
+    }
 }
 
 tasks.named('test') {
